refactor code to meet the requirements